@@ -1,30 +1,47 @@
 #ifndef DEFAULT_PRINT_ON_HPP
 #define DEFAULT_PRINT_ON_HPP
-
-/// In your clase, define a type: if you defined a
-///  print_on(ostream &) const
-///   method like genio.h: GENIO_print_on
-///  typedef void has_print_on;
-/// or if has two arg print_on(ostream &, Writer &w)
-///   typedef void has_print_on_writer;
-/// if you inherit from a class that has defined one of these, override it with some other type than void: typedef bool has_print_on_writer would disable
-
-
 #include <iostream>
-#include "print_on.hpp"
 
-/*
-template <class T,class c,class v>
-std::basic_ostream<c,v> &operator <<(std::basic_ostream<c,v> &o,const T &t) 
+#include <vector>
+
+template <class V,class charT,class Traits>
+std::basic_ostream<charT,Traits> & operator << (std::basic_ostream<charT,Traits> &o,const std::vector<V> &v) 
 {
-    t.print_on(o);
+    o << '[';
+    bool first=true;
+    for (typename std::vector<V>::const_iterator i=v.begin(),e=v.end();i!=e;++i) {
+        if (first)
+            first=false;
+        else
+            o << ',';
+        o << *i;
+    }
+    o << ']';
     return o;
 }
+
+
+//# include "print_on.hpp"
+
+/*
+template <class C,class V=void>
+struct default_print_on;
+
+template <class C,class V>
+struct default_print_on {
+};
+
+template <class C> 
+struct default_print_on<C,typename C::default_print_on> {
+  typedef void type;
+};
 */
-                                    
-template <class C,class charT, class Traits>
-std::basic_ostream<charT,Traits>&
-operator << (std::basic_ostream<charT,Traits>& os, const C &arg,typename not_has_print_on<A>::type* dummy = 0)) 
+
+//USAGE: typedef Self default_print_on
+//FIXME: doesn't work
+template <class A,class charT, class Traits>
+inline std::basic_ostream<charT,Traits>&
+operator << (std::basic_ostream<charT,Traits>& s, const typename A::default_print_on &arg)
 {
  if (!s.good()) return s;
     std::ios_base::iostate err = std::ios_base::goodbit;
